feat: migrate earned badges list

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -32,149 +32,7 @@
 				</ng-template>
 				<ng-template #badgesTemplate>
 					<ng-template [bgAwaitPromises]="[badgesLoaded]">
-						<div class="oeb-section-sm">
-							<div class="tw-grid tw-grid-cols-2 tw-gap-3">
-								<div
-									class="tw-bg-white tw-rounded-[10px] tw-border-purple tw-border-solid tw-border tw-h-[90px] tw-p-4"
-								>
-									<div class="tw-whitespace-nowrap tw-flex tw-items-center tw-mb-2">
-										<ng-icon hlm class="tw-mr-2" size="sm" name="lucideHexagon" /><span
-											hlmP
-											size="sm"
-											>Badges</span
-										>
-									</div>
-									@if (!!allBadges) {
-										<p
-											hlmP
-											#badgesCounter
-											[countUp]="allBadges.length"
-											class="tw-text-purple tw-font-bold"
-										></p>
-									}
-								</div>
-							</div>
-						</div>
-
-						<!-- No badges, empty state! -->
-						@if (allBadges.length === 0) {
-							<section class="emptysection l-emptysection">
-								<h2 class="emptysection-x-headline">{{ 'RecBadge.noBadgesYet' | translate }}</h2>
-								<p class="emptysection-x-copy">{{ 'RecBadge.collectShareBadges' | translate }}</p>
-								<div class="emptysection-x-imagecontainer">
-									<img
-										alt="Illustration of backpack with badges"
-										class="emptysection-x-image"
-										[src]="noBadgesImageUrl"
-									/>
-								</div>
-							</section>
-						}
-
-						<!-- Badge Search, group and grid/list toggle -->
-						@if (allBadges.length > 0) {
-							<div class="oeb-section-sm">
-								<div class="tw-flex tw-flex-wrap tw-gap-4 tw-items-center oeb-standard-padding-bottom">
-									<div class="tw-flex tw-relative tw-items-center">
-										<input
-											type="text"
-											name="forminput"
-											changeOrder
-											class="!tw-bg-white tw-w-full tw-border-1 tw-border-purple md:tw-w-96 tw-border-solid tw-h-12 tw-rounded-lg tw-p-2"
-											placeholder="{{ 'Badge.searchBadges' | translate }}"
-											[(ngModel)]="searchQuery"
-											hlmInput
-										/>
-										<ng-icon
-											hlm
-											name="lucideSearch"
-											class="tw-w-8 tw-h-8 tw-absolute tw-top-1/2 tw-right-2 -tw-translate-y-1/2 tw-pointer-events-none tw-text-purple"
-										></ng-icon>
-									</div>
-									<span>{{ 'Badge.sortBy' | translate }} </span>
-									<oeb-global-sort-select
-										placeholder="{{ 'Badge.sortBy' | translate }}"
-										class="oeb tw-w-[12rem]"
-										[control]="sortControl"
-										(sortChanged)="onSortChanged($event)"
-									>
-									</oeb-global-sort-select>
-									<oeb-checkbox
-										class="tw-mt-2 md:tw-mt-0"
-										name="groupby"
-										[(ngModel)]="groupByIssuer"
-										[text]="'RecBadge.groupByInstitution' | translate"
-										[noMargin]="true"
-									></oeb-checkbox>
-								</div>
-								<!-- Grid View -->
-								@if (badgesDisplay === 'grid') {
-									<!-- ------------------ UNGROUPED ------------------  -->
-									@if (!groupByIssuer) {
-										<div class="tw-gap-6 tw-grid tw-grid-cols-badges" [@stagger]>
-											@for (
-												badgeResult of badgeResults;
-												track trackById($index, badgeResult.badge)
-											) {
-												<bg-badgecard
-													@appearAnimation
-													[badgeTitle]="badgeResult.badge.badgeClass.name"
-													[badgeImage]="badgeResult.badge.image"
-													[badgeIssueDate]="badgeResult?.badge?.issueDate"
-													[mostRelevantStatus]="badgeResult.badge.mostRelevantStatus"
-													[issuerTitle]="badgeResult.badge.badgeClass.issuer.name"
-													[issuerSlug]="badgeResult.badge.badgeClass.issuer.slug"
-													[badgeSlug]="badgeResult.badge.slug"
-													[competencies]="
-														badgeResult.badge.getExtension(
-															'extensions:CompetencyExtension',
-															[{}]
-														)
-													"
-													[imported]="badgeResult.badge.imported"
-												></bg-badgecard>
-											}
-										</div>
-									}
-									<!-- ------------------ GROUP BY ISSUER ------------------  -->
-									@if (groupByIssuer) {
-										@for (issuerGroup of issuerResults; track issuerGroup) {
-											<div>
-												<h3
-													class="u-text-h3-semibold u-margin-bottom2x u-margin-top6x u-text-dark1"
-												>
-													{{ issuerGroup.issuer.name }}
-													<span
-														class="u-text-small-semibold-caps u-text-dark4 u-margin-left2x"
-														>{{ issuerGroup.badges.length }}
-														{{ issuerGroup.badges.length === 1 ? 'Badge' : 'Badges' }}</span
-													>
-												</h3>
-												<div class="tw-gap-6 tw-grid tw-grid-cols-badges" [@stagger]>
-													@for (badge of issuerGroup.badges; track badge) {
-														<bg-badgecard
-															@appearAnimation
-															[badgeTitle]="badge.badgeClass.name"
-															[badgeImage]="badge.image"
-															[badgeIssueDate]="badge.issueDate"
-															[mostRelevantStatus]="badge.mostRelevantStatus"
-															[issuerSlug]="issuerIdToSlug(issuerGroup.issuerId)"
-															[issuerTitle]="badge.badgeClass.issuer.name"
-															[badgeSlug]="badge.slug"
-															[competencies]="
-																badge.getExtension('extensions:CompetencyExtension', [
-																	{},
-																])
-															"
-														></bg-badgecard>
-													}
-												</div>
-											</div>
-										}
-									}
-								}
-							</div>
-						}
+						<recipient-earned-badges-overview [badges]="allBadges" />
 					</ng-template>
 				</ng-template>
 
