refactor: remove unused code from backpack

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -15,11 +15,11 @@
 					@if (activeTab === 'badges' || activeTab === 'profile') {
 						<oeb-button
 							icon="lucideUpload"
+							[iconLeft]="true"
 							[variant]="activeTab === 'profile' ? 'secondary' : 'default'"
-							[iconLeft]="!mobile"
 							(click)="uploadBadge()"
 							[disabled-when-requesting]="true"
-							[text]="mobile ? null : ('RecBadge.uploadBadge' | translate)"
+							[text]="'RecBadge.uploadBadge' | translate"
 						>
 						</oeb-button>
 					}
