--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -1,137 +1,15 @@
-<main importLauncher class="">
+<main>
 	<form-message></form-message>
 
-	<div class="page-padding oeb">
-		<div class="tw-bg-lightpurple oeb-inset-padding">
-			<ng-template [bgAwaitPromises]="[profileLoaded]">
-				<div class="md:tw-flex tw-justify-between tw-items-center oeb-section-sm">
-					<h2 hlmH2 class="tw-text-oebblack tw-font-bold tw-pb-4 md:tw-pb-0">
-						{{ 'RecBadge.greating' | translate }}
-						<span class="tw-capitalize">{{ profile.firstName }}</span
-						>,
-						{{ 'RecBadge.greating2' | translate }}
-					</h2>
-
-					@if (activeTab === 'badges' || activeTab === 'profile') {
-						<oeb-button
-							icon="lucideUpload"
-							[iconLeft]="true"
-							[variant]="activeTab === 'profile' ? 'secondary' : 'default'"
-							(click)="uploadBadge()"
-							[disabled-when-requesting]="true"
-							[text]="'RecBadge.uploadBadge' | translate"
-						>
-						</oeb-button>
-					}
-				</div>
-			</ng-template>
-			<div class="oeb-section-sm">
-				<oeb-tabs (onTabChanged)="onTabChange($event)" [activeTab]="activeTab" [tabs]="tabs"></oeb-tabs>
-				<ng-template #profileTemplate>
-					<recipient-skill-visualisation [skills]="allSkills"></recipient-skill-visualisation>
-				</ng-template>
-				<ng-template #badgesTemplate>
-					<ng-template [bgAwaitPromises]="[badgesLoaded]">
-						<recipient-earned-badges-overview [badges]="allBadges" />
-					</ng-template>
-				</ng-template>
-
-				<ng-template #badgesCompetency>
-					@if (activeTab === 'competencies') {
-						<recipient-competency-overview [badges]="allBadges" />
-					}
-				</ng-template>
-				<ng-template #learningPathTemplate>
-					<ng-template [bgAwaitPromises]="[learningpathLoaded]">
-						<recipient-learningpaths-overview [learningPaths]="allLearningPaths" />
-					</ng-template>
-				</ng-template>
-				<ng-template #collectionTemplate>
-					<ng-template [bgAwaitPromises]="[collectionsLoaded]">
-						<!-- No collections, empty state! -->
-						@if (collections.length === 0) {
-							<section class="tw-mt-8">
-								<div class="tw-flex tw-justify-between">
-									<div>
-										<h2
-											class="tw-text-oebblack md:tw-text-[22px] tw-leading-[120%] tw-font-bold tw-uppercase"
-										>
-											{{ 'BadgeCollection.useCollectionsForApplications' | translate }}
-										</h2>
-										<p class="tw-mt-4 tw-text-oebblack tw-text-lg">
-											{{ 'BadgeCollection.collectionInfoText' | translate }}
-										</p>
-										<p class="tw-mt-2 tw-text-purple tw-text-lg tw-italic">
-											{{ 'BadgeCollection.addLink' | translate }}
-										</p>
-										<div class="tw-mt-6">
-											<oeb-button
-												(click)="routeToCollectionCreation()"
-												[text]="'BadgeCollection.createCollectionNow' | translate"
-											>
-											</oeb-button>
-										</div>
-									</div>
-									<img
-										class="tw-hidden md:tw-flex"
-										src="assets/oeb/images/backpack/collection_visual.svg"
-									/>
-								</div>
-							</section>
-						}
-
-						@if (collections.length > 0) {
-							<div class="oeb-section-sm">
-								<h2
-									class="tw-text-oebblack md:tw-text-[22px] tw-leading-[120%] tw-font-bold tw-uppercase tw-items-center tw-flex tw-mb-4"
-								>
-									{{ 'BadgeCollection.useCollectionsForApplications' | translate }}
-									<ng-icon
-										(click)="openCollectionInfoDialog()"
-										hlm
-										class="tw-text-purple tw-min-w-10 tw-ml-2"
-										size="lg"
-										name="lucideInfo"
-									/>
-								</h2>
-								<div class="tw-grid min-[450px]:tw-grid-cols-badges tw-gap-6">
-									@for (collection of collections; track collection) {
-										<bg-collectioncard
-											[collection]="collection"
-											(share)="openShareDialog(collection)"
-										></bg-collectioncard>
-									}
-								</div>
-								<oeb-button
-									[text]="'BadgeCollection.createCollection' | translate"
-									variant="secondary"
-									(click)="routeToCollectionCreation()"
-									size="md"
-									class="tw-mt-4 tw-float-right"
-								>
-								</oeb-button>
-							</div>
-						}
-						<div></div>
-					</ng-template>
-				</ng-template>
-				<ng-template #collectionInfoHeaderTemplate>
-					<h2 class="tw-text-[22px] tw-text-purple tw-font-bold tw-leading-[120%]">
-						{{ 'BadgeCollection.useCollectionsForApplications' | translate }}
-					</h2>
-				</ng-template>
-				<ng-template #collectionInfoContentTemplate>
-					<p
-						class="tw-text-lg tw-text-oebblack tw-mt-2"
-						[innerHTML]="'BadgeCollection.collectionInfoText' | translate"
-					></p>
-					<p
-						class="tw-text-lg tw-text-purple tw-italic tw-mt-1"
-						[innerHTML]="'BadgeCollection.addLink' | translate"
-					></p>
-				</ng-template>
-			</div>
-		</div>
-		<add-badge-dialog #addBadgeDialog></add-badge-dialog>
-	</div>
+	<ng-template [bgAwaitPromises]="[profileLoaded, badgesLoaded, learningpathLoaded, collectionsLoaded]">
+		<recipient-backpack
+			[profile]="profile"
+			[skills]="allSkills"
+			[badges]="allBadges"
+			[learningPaths]="allLearningPaths"
+			[collections]="collections"
+			(badgeUploadClicked)="uploadBadge()"
+		/>
+	</ng-template>
+	<add-badge-dialog #addBadgeDialog />
 </main>
