--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -1,495 +1,15 @@
-<main importLauncher class="">
+<main>
 	<form-message></form-message>
 
-	<div class="page-padding oeb">
-		<div class="tw-bg-lightpurple oeb-inset-padding">
-			<ng-template [bgAwaitPromises]="[profileLoaded]">
-				<div class="md:tw-flex tw-justify-between tw-items-center oeb-section-sm">
-					<h2 hlmH2 class="tw-text-oebblack tw-font-bold tw-pb-4 md:tw-pb-0">
-						{{ 'RecBadge.greating' | translate }}
-						<span class="tw-capitalize">{{ profile.firstName }}</span
-						>,
-						{{ 'RecBadge.greating2' | translate }}
-					</h2>
-
-					@if (activeTab === 'badges' || activeTab === 'profile') {
-						<oeb-button
-							icon="lucideUpload"
-							[variant]="activeTab === 'profile' ? 'secondary' : 'default'"
-							[iconLeft]="!mobile"
-							(click)="uploadBadge()"
-							[disabled-when-requesting]="true"
-							[text]="mobile ? null : ('RecBadge.uploadBadge' | translate)"
-						>
-						</oeb-button>
-					}
-				</div>
-			</ng-template>
-			<div class="oeb-section-sm">
-				<oeb-tabs (onTabChanged)="onTabChange($event)" [activeTab]="activeTab" [tabs]="tabs"></oeb-tabs>
-				<ng-template #profileTemplate>
-					<recipient-skill-visualisation [skills]="allSkills"></recipient-skill-visualisation>
-				</ng-template>
-				<ng-template #badgesTemplate>
-					<ng-template [bgAwaitPromises]="[badgesLoaded]">
-						<div class="oeb-section-sm">
-							<div class="tw-grid tw-grid-cols-2 tw-gap-3">
-								<div
-									class="tw-bg-white tw-rounded-[10px] tw-border-purple tw-border-solid tw-border tw-h-[90px] tw-p-4"
-								>
-									<div class="tw-whitespace-nowrap tw-flex tw-items-center tw-mb-2">
-										<ng-icon hlm class="tw-mr-2" size="sm" name="lucideHexagon" /><span
-											hlmP
-											size="sm"
-											>Badges</span
-										>
-									</div>
-									@if (!!allBadges) {
-										<p
-											hlmP
-											#badgesCounter
-											[countUp]="allBadges.length"
-											class="tw-text-purple tw-font-bold"
-										></p>
-									}
-								</div>
-							</div>
-						</div>
-
-						<!-- No badges, empty state! -->
-						@if (allBadges.length === 0) {
-							<section class="emptysection l-emptysection">
-								<h2 class="emptysection-x-headline">{{ 'RecBadge.noBadgesYet' | translate }}</h2>
-								<p class="emptysection-x-copy">{{ 'RecBadge.collectShareBadges' | translate }}</p>
-								<div class="emptysection-x-imagecontainer">
-									<img
-										alt="Illustration of backpack with badges"
-										class="emptysection-x-image"
-										[src]="noBadgesImageUrl"
-									/>
-								</div>
-							</section>
-						}
-
-						<!-- Badge Search, group and grid/list toggle -->
-						@if (allBadges.length > 0) {
-							<div class="oeb-section-sm">
-								<div class="tw-flex tw-flex-wrap tw-gap-4 tw-items-center oeb-standard-padding-bottom">
-									<div class="tw-flex tw-relative tw-items-center">
-										<input
-											type="text"
-											name="forminput"
-											changeOrder
-											class="!tw-bg-white tw-w-full tw-border-1 tw-border-purple md:tw-w-96 tw-border-solid tw-h-12 tw-rounded-lg tw-p-2"
-											placeholder="{{ 'Badge.searchBadges' | translate }}"
-											[(ngModel)]="searchQuery"
-											hlmInput
-										/>
-										<ng-icon
-											hlm
-											name="lucideSearch"
-											class="tw-w-8 tw-h-8 tw-absolute tw-top-1/2 tw-right-2 -tw-translate-y-1/2 tw-pointer-events-none tw-text-purple"
-										></ng-icon>
-									</div>
-									<span>{{ 'Badge.sortBy' | translate }} </span>
-									<oeb-global-sort-select
-										placeholder="{{ 'Badge.sortBy' | translate }}"
-										class="oeb tw-w-[12rem]"
-										[control]="sortControl"
-										(sortChanged)="onSortChanged($event)"
-									>
-									</oeb-global-sort-select>
-									<oeb-checkbox
-										class="tw-mt-2 md:tw-mt-0"
-										name="groupby"
-										[(ngModel)]="groupByIssuer"
-										[text]="'RecBadge.groupByInstitution' | translate"
-										[noMargin]="true"
-									></oeb-checkbox>
-								</div>
-								<!-- Grid View -->
-								@if (badgesDisplay === 'grid') {
-									<!-- ------------------ UNGROUPED ------------------  -->
-									@if (!groupByIssuer) {
-										<div class="tw-gap-6 tw-grid tw-grid-cols-badges" [@stagger]>
-											@for (
-												badgeResult of badgeResults;
-												track trackById($index, badgeResult.badge)
-											) {
-												<bg-badgecard
-													@appearAnimation
-													[badgeTitle]="badgeResult.badge.badgeClass.name"
-													[badgeImage]="badgeResult.badge.image"
-													[badgeIssueDate]="badgeResult?.badge?.issueDate"
-													[mostRelevantStatus]="badgeResult.badge.mostRelevantStatus"
-													[issuerTitle]="badgeResult.badge.badgeClass.issuer.name"
-													[issuerSlug]="badgeResult.badge.badgeClass.issuer.slug"
-													[badgeSlug]="badgeResult.badge.slug"
-													[competencies]="
-														badgeResult.badge.getExtension(
-															'extensions:CompetencyExtension',
-															[{}]
-														)
-													"
-													[imported]="badgeResult.badge.imported"
-												></bg-badgecard>
-											}
-										</div>
-									}
-									<!-- ------------------ GROUP BY ISSUER ------------------  -->
-									@if (groupByIssuer) {
-										@for (issuerGroup of issuerResults; track issuerGroup) {
-											<div>
-												<h3
-													class="u-text-h3-semibold u-margin-bottom2x u-margin-top6x u-text-dark1"
-												>
-													{{ issuerGroup.issuer.name }}
-													<span
-														class="u-text-small-semibold-caps u-text-dark4 u-margin-left2x"
-														>{{ issuerGroup.badges.length }}
-														{{ issuerGroup.badges.length === 1 ? 'Badge' : 'Badges' }}</span
-													>
-												</h3>
-												<div class="tw-gap-6 tw-grid tw-grid-cols-badges" [@stagger]>
-													@for (badge of issuerGroup.badges; track badge) {
-														<bg-badgecard
-															@appearAnimation
-															[badgeTitle]="badge.badgeClass.name"
-															[badgeImage]="badge.image"
-															[badgeIssueDate]="badge.issueDate"
-															[mostRelevantStatus]="badge.mostRelevantStatus"
-															[issuerSlug]="issuerIdToSlug(issuerGroup.issuerId)"
-															[issuerTitle]="badge.badgeClass.issuer.name"
-															[badgeSlug]="badge.slug"
-															[competencies]="
-																badge.getExtension('extensions:CompetencyExtension', [
-																	{},
-																])
-															"
-														></bg-badgecard>
-													}
-												</div>
-											</div>
-										}
-									}
-								}
-							</div>
-						}
-					</ng-template>
-				</ng-template>
-
-				<ng-template #badgesCompetency>
-					@if (activeTab === 'competencies') {
-						<div class="oeb-headline-container-sm">
-							<div class="oeb-section-sm">
-								<div class="tw-grid tw-grid-cols-1 md:tw-grid-cols-3 tw-gap-3">
-									<div
-										class="tw-bg-white tw-rounded-[10px] tw-border-purple tw-border-solid tw-border tw-h-[90px] tw-p-4"
-									>
-										<div class="tw-whitespace-nowrap tw-flex tw-items-center tw-mb-2">
-											<ng-icon hlm class="tw-mr-2" size="sm" name="lucideHexagon" /><span
-												hlmP
-												size="sm"
-												>{{ 'RecBadge.competencies' | translate }}</span
-											>
-										</div>
-										@if (!!allBadges) {
-											<p
-												hlmP
-												#countup
-												hlmP
-												class="tw-text-purple tw-font-bold"
-												[countUp]="objectKeys(groupedUserCompetencies).length"
-											></p>
-										}
-									</div>
-									<div
-										class="tw-bg-white tw-rounded-[10px] tw-border-purple tw-border-solid tw-border tw-h-[90px] tw-p-4"
-									>
-										<div class="tw-whitespace-nowrap tw-flex tw-items-center tw-mb-2">
-											<ng-icon hlm class="tw-mr-2" size="sm" name="lucideClock" /><span
-												hlmP
-												size="sm"
-												>{{ 'RecBadge.studyingTime' | translate }}</span
-											>
-										</div>
-										@if (!!allBadges) {
-											<p hlmP class="tw-text-purple tw-font-bold">
-												<span #countup2 [countUp]="totalStudyTime / 60">0</span>
-												{{ 'RecBadge.hours' | translate }}
-											</p>
-										}
-									</div>
-								</div>
-							</div>
-							<div class="oeb-section-sm">
-								@if (objectValues(newGroupedUserCompetencies).length > 0) {
-									<div class="lg:tw-flex tw-flex-wrap oeb-standard-padding-bottom">
-										<div class="tw-w-full lg:tw-w-[270px] lg:tw-flex-shrink-0 lg:tw-pb-0 tw-pb-4">
-											<div class="tw-flex tw-items-center">
-												<ng-icon hlm class="tw-mr-2" name="lucideHeart" />
-												<h3 hlmH3 class="tw-font-medium tw-text-oebblack tw-ml-2">
-													{{ 'RecBadge.newCompetencies' | translate }}
-												</h3>
-											</div>
-										</div>
-										<div class="tw-flex-grow">
-											<div class="tw-grid tw-grid-cols-1 tw-gap-2">
-												@for (
-													competency of objectValues(newGroupedUserCompetencies);
-													track competency
-												) {
-													<oeb-competency
-														[competency]="competency"
-														[new]="true"
-													></oeb-competency>
-												}
-											</div>
-										</div>
-									</div>
-								}
-								<div class="lg:tw-flex tw-flex-wrap oeb-standard-padding-bottom">
-									<div class="tw-w-full lg:tw-w-[270px] lg:tw-flex-shrink-0 lg:tw-pb-0 tw-pb-4">
-										<div class="tw-flex tw-items-center">
-											<ng-icon hlm class="tw-mr-2" name="lucideHand" />
-											<h3 hlmH3 class="tw-font-medium tw-text-oebblack tw-ml-2">
-												{{ 'RecBadge.skills' | translate }}
-											</h3>
-										</div>
-									</div>
-									<div class="tw-flex-grow">
-										<div class="tw-grid tw-grid-cols-1 tw-gap-2">
-											@for (
-												competency of objectValues(groupedUserCompetencies)
-													| dynamicFilter: { category: 'skill' };
-												track competency
-											) {
-												<oeb-competency [competency]="competency"></oeb-competency>
-											}
-										</div>
-									</div>
-								</div>
-								<div class="lg:tw-flex tw-flex-wrap oeb-standard-padding-bottom">
-									<div class="tw-w-full lg:tw-w-[270px] lg:tw-flex-shrink-0 lg:tw-pb-0 tw-pb-4">
-										<div class="tw-flex tw-items-center">
-											<ng-icon hlm class="tw-mr-2" name="lucideBookOpen" />
-											<h3 hlmH3 class="tw-font-medium tw-text-oebblack tw-ml-2">
-												{{ 'RecBadge.knowledge' | translate }}
-											</h3>
-										</div>
-									</div>
-									<div class="tw-flex-grow">
-										<div class="tw-grid tw-grid-cols-1 tw-gap-2">
-											@for (
-												competency of objectValues(groupedUserCompetencies)
-													| dynamicFilter: { category: 'knowledge' };
-												track competency
-											) {
-												<oeb-competency [competency]="competency"></oeb-competency>
-											}
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					}
-				</ng-template>
-				<ng-template #learningPathTemplate>
-					<ng-template [bgAwaitPromises]="[learningpathLoaded]">
-						<!-- No badges, empty state! -->
-						@if (allLearningPaths.length === 0) {
-							<section class="emptysection l-emptysection">
-								<h2 class="emptysection-x-headline">{{ 'RecBadge.noLearningPathYet' | translate }}</h2>
-								<p class="emptysection-x-copy">{{ 'RecBadge.collectShareLearningPath' | translate }}</p>
-								<div class="emptysection-x-imagecontainer">
-									<img
-										alt="Illustration of backpack with badges"
-										class="emptysection-x-image"
-										[src]="noBadgesImageUrl"
-									/>
-								</div>
-							</section>
-						}
-
-						@if (allLearningPaths.length > 0) {
-							<div class="oeb-section-sm">
-								<div class="tw-flex tw-flex-wrap tw-items-center">
-									<input
-										type="text"
-										name="forminput"
-										id="forminput"
-										placeholder="{{ 'LearningPath.searchMds' | translate }}"
-										[(ngModel)]="searchQuery"
-										class="tw-w-[300px] tw-border-solid tw-border-purple tw-bg-white tw-mr-6"
-										hlmInput
-									/>
-								</div>
-							</div>
-						}
-
-						<div>
-							@if (learningPathsReadyToRequest.length > 0) {
-								<div class="oeb-section-sm">
-									<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-										{{ 'LearningPath.getYourPath' | translate }}
-									</h3>
-									<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-										@for (lp of learningPathsReadyToRequest; track lp) {
-											<bg-learningpathcard
-												[badgeImage]="$any(lp).participationBadge_image"
-												[name]="lp.name"
-												[issuerTitle]="lp.issuer_name"
-												[description]="lp.description"
-												[tags]="lp.tags"
-												[slug]="lp.slug"
-												[studyLoad]="calculateStudyLoad(lp)"
-												[completed]="checkCompleted(lp)"
-												[progress]="lp.progress"
-												[requested]="lp.requested"
-												[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-											></bg-learningpathcard>
-										}
-									</div>
-								</div>
-							}
-
-							@if (learningPathsInProgress.length > 0) {
-								<div class="oeb-section-sm">
-									<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-										{{ 'LearningPath.continue' | translate }}
-									</h3>
-									<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-										@for (lp of learningPathsInProgress; track lp) {
-											<bg-learningpathcard
-												[badgeImage]="$any(lp).participationBadge_image"
-												[name]="lp.name"
-												[issuerTitle]="lp.issuer_name"
-												[description]="lp.description"
-												[tags]="lp.tags"
-												[slug]="lp.slug"
-												[progress]="lp.progress"
-												[completed]="checkCompleted(lp)"
-												[requested]="lp.requested"
-												[studyLoad]="calculateStudyLoad(lp)"
-												[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-											></bg-learningpathcard>
-										}
-									</div>
-								</div>
-							}
-
-							@if (learningPathsCompleted.length > 0) {
-								<div class="oeb-section-sm">
-									<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-										{{ 'LearningPath.finished' | translate }}
-									</h3>
-									<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-										@for (lp of learningPathsCompleted; track lp) {
-											<bg-learningpathcard
-												[badgeImage]="$any(lp).participationBadge_image"
-												[name]="lp.name"
-												[issuerTitle]="lp.issuer_name"
-												[description]="lp.description"
-												[tags]="lp.tags"
-												[slug]="lp.slug"
-												[progress]="lp.progress"
-												[completed]="true"
-												[studyLoad]="calculateStudyLoad(lp)"
-												[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-											></bg-learningpathcard>
-										}
-									</div>
-								</div>
-							}
-						</div>
-					</ng-template>
-				</ng-template>
-				<ng-template #collectionTemplate>
-					<ng-template [bgAwaitPromises]="[collectionsLoaded]">
-						<!-- No collections, empty state! -->
-						@if (collections.length === 0) {
-							<section class="tw-mt-8">
-								<div class="tw-flex tw-justify-between">
-									<div>
-										<h2
-											class="tw-text-oebblack md:tw-text-[22px] tw-leading-[120%] tw-font-bold tw-uppercase"
-										>
-											{{ 'BadgeCollection.useCollectionsForApplications' | translate }}
-										</h2>
-										<p class="tw-mt-4 tw-text-oebblack tw-text-lg">
-											{{ 'BadgeCollection.collectionInfoText' | translate }}
-										</p>
-										<p class="tw-mt-2 tw-text-purple tw-text-lg tw-italic">
-											{{ 'BadgeCollection.addLink' | translate }}
-										</p>
-										<div class="tw-mt-6">
-											<oeb-button
-												(click)="routeToCollectionCreation()"
-												[text]="'BadgeCollection.createCollectionNow' | translate"
-											>
-											</oeb-button>
-										</div>
-									</div>
-									<img
-										class="tw-hidden md:tw-flex"
-										src="assets/oeb/images/backpack/collection_visual.svg"
-									/>
-								</div>
-							</section>
-						}
-
-						@if (collections.length > 0) {
-							<div class="oeb-section-sm">
-								<h2
-									class="tw-text-oebblack md:tw-text-[22px] tw-leading-[120%] tw-font-bold tw-uppercase tw-items-center tw-flex tw-mb-4"
-								>
-									{{ 'BadgeCollection.useCollectionsForApplications' | translate }}
-									<ng-icon
-										(click)="openCollectionInfoDialog()"
-										hlm
-										class="tw-text-purple tw-min-w-10 tw-ml-2"
-										size="lg"
-										name="lucideInfo"
-									/>
-								</h2>
-								<div class="tw-grid min-[450px]:tw-grid-cols-badges tw-gap-6">
-									@for (collection of collections; track collection) {
-										<bg-collectioncard
-											[collection]="collection"
-											(share)="openShareDialog(collection)"
-										></bg-collectioncard>
-									}
-								</div>
-								<oeb-button
-									[text]="'BadgeCollection.createCollection' | translate"
-									variant="secondary"
-									(click)="routeToCollectionCreation()"
-									size="md"
-									class="tw-mt-4 tw-float-right"
-								>
-								</oeb-button>
-							</div>
-						}
-						<div></div>
-					</ng-template>
-				</ng-template>
-				<ng-template #collectionInfoHeaderTemplate>
-					<h2 class="tw-text-[22px] tw-text-purple tw-font-bold tw-leading-[120%]">
-						{{ 'BadgeCollection.useCollectionsForApplications' | translate }}
-					</h2>
-				</ng-template>
-				<ng-template #collectionInfoContentTemplate>
-					<p
-						class="tw-text-lg tw-text-oebblack tw-mt-2"
-						[innerHTML]="'BadgeCollection.collectionInfoText' | translate"
-					></p>
-					<p
-						class="tw-text-lg tw-text-purple tw-italic tw-mt-1"
-						[innerHTML]="'BadgeCollection.addLink' | translate"
-					></p>
-				</ng-template>
-			</div>
-		</div>
-		<add-badge-dialog #addBadgeDialog></add-badge-dialog>
-	</div>
+	<ng-template [bgAwaitPromises]="[profileLoaded, badgesLoaded, learningpathLoaded, collectionsLoaded]">
+		<recipient-backpack
+			[profile]="profile"
+			[skills]="allSkills"
+			[badges]="allBadges"
+			[learningPaths]="allLearningPaths"
+			[collections]="collections"
+			(badgeUploadClicked)="uploadBadge()"
+		/>
+	</ng-template>
+	<add-badge-dialog #addBadgeDialog />
 </main>
