fix: remove non-working state due to class methods

--- a/src/app/issuer/components/badgeclass-select-type/badgeclass-select-type.component.html
+++ b/src/app/issuer/components/badgeclass-select-type/badgeclass-select-type.component.html
@@ -16,14 +16,13 @@
 				</p>
 			</div>
 
-			<ng-template [showLoader]="true" [bgAwaitPromises]="[issuerLoaded, badgesLoaded]">
+			<ng-template [showLoader]="true" [bgAwaitPromises]="[issuerLoaded]">
 				<div class="section tw-text-oebblack tw-mt-6">
 					<h2 hlmH2 class="tw-font-bold tw-mb-6">1. {{ 'CreateBadge.chooseCategory' | translate }}</h2>
 
 					<div class="tw-flex tw-justify-evenly oeb-badgeclass-select-container tw-flex-col md:tw-flex-row">
 						<a
 							[routerLink]="['/issuer/issuers', issuerSlug, 'badges', 'create', 'participation']"
-							[state]="{ issuer: issuer }"
 							[attr.data-umami-event]="'create-participation-badge-1'"
 						>
 							<img src="breakdown/static/badgestudio/shapes/participation.svg" />
@@ -32,7 +31,6 @@
 						</a>
 						<a
 							[routerLink]="['/issuer/issuers', issuerSlug, 'badges', 'create', 'competency']"
-							[state]="{ issuer: issuer }"
 							[attr.data-umami-event]="'create-competency-badge-1'"
 						>
 							<img src="breakdown/static/badgestudio/shapes/competency.svg" />
@@ -42,7 +40,6 @@
 						@if (canCreateLp) {
 							<a
 								[routerLink]="['/issuer/issuers', issuerSlug, 'learningpaths', 'create']"
-								[state]="{ issuer: issuer }"
 								[attr.data-umami-event]="'create-micro-degree-1'"
 							>
 								<img src="breakdown/static/badgestudio/shapes/learningpath.svg" />
