--- a/src/app/issuer/components/learningpath-create/learningpath-create.component.html
+++ b/src/app/issuer/components/learningpath-create/learningpath-create.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<form-message></form-message>
 		<h1 hlmH1 class="tw-text-purple tw-font-extrabold">
-			{{ (issuer.is_network ? 'Network.createLp' : 'Issuer.learningPathCreateHeadline') | translate }}
+			{{ (issuer?.is_network ? 'Network.createLp' : 'Issuer.learningPathCreateHeadline') | translate }}
 		</h1>
 		<h3 hlmH3 class="tw-text-oebblack tw-mt-2">{{ 'Issuer.lpSubHeading' | translate }}</h3>
 		<learningpath-edit-form
