Feat/rework recipients datatable (#1819)
* feat: v3 badgeinstance models

* feat: use v3 api

* feat: server-side pagination

* fix: issued on column

* feat: add progress to enum

* fix: temporary dummy values

* fix: use real dom element

* fix: append partial results

* feat: update table count

* feat: update qrcode datatable dynamically

* fix: renamed field

* fix: extension

* fix: show success dialog

* fix: accessors

* fix: hide tab templates

* fix: task pending when in progress

* fix: rm unused

* fix: types

* fix: stop polling after success

* feat: revoke v3 badgeinstances

* feat: debounce search input

* fix: remove unused property

* feat: replace total_count with count provided by endpoints

* Revert "fix: remove unused property"

This reverts commit 01b6e7c1ff457cb6ff81eb6bf173bd79fef24c17.

* feat: fix counting while pagination

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/app/issuer/components/badgeclass-detail/badgeclass-detail.component.html
+++ b/src/app/issuer/components/badgeclass-detail/badgeclass-detail.component.html
@@ -45,61 +45,66 @@
 			}
 		</div>
 	}
-	<ng-template #batchAwards>
-		@if (issuer) {
-			@if (issuer.is_network) {
-				@if (groupedPartnerInstances) {
-					@for (partner of groupedPartnerInstances; track partner) {
-						@if (!partner.has_access && partner.instance_count > 0) {
-							<div class="tw-mb-4">
-								<div class="tw-mt-8 tw-mb-2 tw-flex tw-gap-2 tw-items-center">
-									<img class="tw-w-11" [src]="partner.issuer.image" alt="Partner Logo" />
-									<span class="tw-text-oebblack tw-font-bold tw-text-lg tw-uppercase">{{
-										partner.issuer.name
+	@if (activeTab === 'recipients') {
+		<div #batchAwards>
+			@if (issuer) {
+				@if (issuer.is_network) {
+					@if (groupedPartnerInstances) {
+						@for (partner of groupedPartnerInstances; track partner) {
+							@if (!partner.has_access && partner.instance_count > 0) {
+								<div class="tw-mb-4">
+									<div class="tw-mt-8 tw-mb-2 tw-flex tw-gap-2 tw-items-center">
+										<img class="tw-w-11" [src]="partner.issuer.image" alt="Partner Logo" />
+										<span class="tw-text-oebblack tw-font-bold tw-text-lg tw-uppercase">{{
+											partner.issuer.name
+										}}</span>
+									</div>
+								</div>
+								<div class="tw-bg-purple tw-rounded-[10px] tw-w-full tw-px-4 tw-py-5">
+									<span class="tw-text-white tw-font-semibold tw-text-lg">{{
+										partner.instance_count + ' ' + ('Issuer.badgeAwards' | translate)
 									}}</span>
 								</div>
-							</div>
-							<div class="tw-bg-purple tw-rounded-[10px] tw-w-full tw-px-4 tw-py-5">
-								<span class="tw-text-white tw-font-semibold tw-text-lg">{{
-									partner.instance_count + ' ' + ('Issuer.badgeAwards' | translate)
-								}}</span>
-							</div>
-						} @else if (partner.instances.length) {
-							<div>
-								<div class="tw-mt-8 tw-flex tw-gap-2 tw-items-center">
-									<img class="tw-w-11" [src]="partner.issuer.image" alt="Partner Logo" />
-									<span class="tw-text-oebblack tw-font-bold tw-text-lg tw-uppercase">{{
-										partner.issuer.name
-									}}</span>
+							} @else if (partner.instances.length) {
+								<div>
+									<div class="tw-mt-8 tw-flex tw-gap-2 tw-items-center">
+										<img class="tw-w-11" [src]="partner.issuer.image" alt="Partner Logo" />
+										<span class="tw-text-oebblack tw-font-bold tw-text-lg tw-uppercase">{{
+											partner.issuer.name
+										}}</span>
+									</div>
+									<issuer-detail-datatable
+										[issuer]="issuer"
+										[recipientCount]="partner.instance_count"
+										[recipients]="partner.instances"
+										(actionElement)="revokeInstance($event)"
+										(downloadCertificate)="
+											downloadCertificate($event['instance'], $event['badgeIndex'])
+										"
+										[downloadStates]="downloadStates"
+										[awardInProgress]="isTaskProcessing || isTaskPending"
+									></issuer-detail-datatable>
 								</div>
-								<issuer-detail-datatable
-									[issuer]="issuer"
-									[recipientCount]="partner.instance_count"
-									[recipients]="partner.instances"
-									(actionElement)="revokeInstance($event)"
-									(downloadCertificate)="
-										downloadCertificate($event['instance'], $event['badgeIndex'])
-									"
-									[downloadStates]="downloadStates"
-									[awardInProgress]="isTaskProcessing || isTaskPending"
-								></issuer-detail-datatable>
-							</div>
+							}
 						}
 					}
+				} @else {
+					<issuer-detail-datatable
+						[recipients]="recipients()"
+						[isLoading]="isLoadingInstances"
+						[recipientCount]="recipientCount"
+						[issuer]="issuer"
+						[downloadStates]="downloadStates"
+						[awardInProgress]="isTaskActive && (isTaskPending || isTaskProcessing)"
+						(paginationChange)="onPaginationChange($event)"
+						(searchChange)="onSearchChange($event)"
+						(actionElement)="revokeInstance($event)"
+						(downloadCertificate)="downloadCertificate($event.instance, $event.badgeIndex)"
+					/>
 				}
-			} @else {
-				<issuer-detail-datatable
-					[issuer]="issuer"
-					[recipientCount]="recipientCount"
-					[recipients]="instanceResults"
-					(actionElement)="revokeInstance($event)"
-					(downloadCertificate)="downloadCertificate($event['instance'], $event['badgeIndex'])"
-					[downloadStates]="downloadStates"
-					[awardInProgress]="isTaskProcessing || isTaskPending"
-				></issuer-detail-datatable>
 			}
-		}
-	</ng-template>
+		</div>
+	}
 	<ng-template #headerTemplate>
 		<h2 class="tw-font-bold tw-my-2" hlmH2>{{ 'Badge.copyForWhatInstitution' | translate }}</h2>
 	</ng-template>
