fix: pass network slug to edit form

--- a/src/app/issuer/components/network-edit/network-edit.component.html
+++ b/src/app/issuer/components/network-edit/network-edit.component.html
@@ -9,6 +9,6 @@
 			></h1>
 		</div>
 
-		<issuer-edit-form [issuer]="network" [issuerSlug]="issuerSlug" [networkForm]="true" />
+		<issuer-edit-form [issuer]="network" [issuerSlug]="networkSlug" [networkForm]="true" />
 	</div>
 </div>
