--- a/src/app/issuer/components/issuer-edit/issuer-edit.component.html
+++ b/src/app/issuer/components/issuer-edit/issuer-edit.component.html
@@ -13,5 +13,5 @@
 		</div>
 	</div>
 
-	<issuer-edit-form [issuer]="issuer" [issuerSlug]="issuerSlug"></issuer-edit-form>
+	<issuer-edit-form [issuerOrNetwork]="issuer" [issuerOrNetworkSlug]="issuerSlug"></issuer-edit-form>
 </div>
