fix: adjust font style on network dashboard

--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -22,8 +22,8 @@
 					<img width="70px" [src]="network().image" alt="Network Logo" />
 				</div>
 				<div class="tw-flex tw-flex-col">
-					<span class="tw-font-bold tw-text-3xl tw-text-oebblack">{{ network().name }}</span>
-					<span class="tw-text-oebblack tw-text-lg tw-font-semibold tw-mt-2">
+					<span class="tw-font-bold tw-text-3xl tw-text-oebblack tw-flex-grow">{{ network().name }}</span>
+					<span class="tw-text-oebblack tw-italic tw-flex-grow">
 						{{
 							'Network.yourRole'
 								| translate
